# tc-ui

./: .basic_html_props.txt  .css_props.txt  .gitignore  Cargo.toml  _.txt  app.py  foo.py  main.py  sample.txt  tc_ui.pyi  xample.txt
_stubs/: reader.py
src/: __init__.py  css_properties.rs  dom_components.rs  enums.py  html_properties.rs  lib.rs  main.py  raw_props.txt  static_component.rs  tc_components.rs  zzz.txt
src/critical/: core_css.rs  core_html.rs  css_core.rs  css_py.rs  css_utils.rs  fmt_css.rs  fmt_html.rs  foo.py  hierarchy.rs  html_core.rs  html_py.rs  html_utils.rs  impl_hierarchy.rs  mod.rs  py_css_.rs  py_html_.rs  utils_css.rs  utils_html.rs
src/css/: .css_  css_a_d.rs  css_core.rs  css_e_h.rs  css_i_l.rs  css_m_p.rs  css_py.rs  css_q_t.rs  css_u_z.rs  css_utils.rs  enums.rs  mod.rs  old_css_properties.rs  rsenums.rs
src/generators/: stub_gen.py
src/html/: html_attrs.rs  html_core.rs  html_py.rs  html_setters.rs  html_tc_attrs.rs  html_utils.rs  mod.rs  old_html_properties.rs
src/tc_components/: _template.rs  button.rs  commentary.rs  divider.rs  htmx_components.rs  mod.rs  page.rs  pylogic.rs  text.rs
src/utils/: formaters.rs  mod.rs  str_replace.rs
stubs/: app.py  data.py  fmtr.py  initializer.py  node.py  reader.py
tests/html/: test_empty_tag.py
tests/style/: test_empty_css.py  test_single.py
z/: _.txt  a.rs  app.py  main.py  sample.txt
z/src/: card.py  components.py  containers.py  styled.py  styles.py  texts.py  utils.py
