[package]
name = "tc_ui"
version = "0.2.1"
edition = "2024"

[lib]
name = "tc_ui"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module", "multiple-pymethods"] }

[package-metadata.maturin]
include-pyi = true

[profile.release]
opt-level = 3
lto = false

[profile.dev]
incremental = true
opt-level = 0

[build]
rustc-wrapper = "sccache"

